--- a/static/css/newlogin.css
+++ b/static/css/newlogin.css
@@ -85,3 +85,9 @@ a {
     font-size: 14px;
     text-decoration: none;
 }
+.error-message {
+    color: red;
+    font-size: 12px;
+    display: block;
+    margin-top: 5px;
+}
