--- a/user/templates/user/adminpanel.html
+++ b/user/templates/user/adminpanel.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/adminpanel.css' %}">
     <title>Admin Panel Dashboard</title>
-    
+
 </head>
 
 <body>
       <nav class="nav-bar">
         <div class="logo">
-            <img src="{% static 'images/logo.jpg' %}" alt="Logo" 
+            <img src="{% static 'images/logo.jpg' %}" alt="Logo"
                  style="width: 50px; height: auto; border-radius: 50%; margin-right: 10px; padding-top: 3px;">
             Railway Reservation - <span style="color: #ffffff;">Admin Panel</span>
         </div>
@@ -33,15 +33,15 @@
     <a href="{% url 'managefaqs' %}" class="nav-link"><button>Manage FAQs</button></a>
     <a href="{% url 'managenotifications' %}" class="nav-link"><button>Manage Notifications</button></a>
     <a href="{% url 'manageservices' %}" class="nav-link"><button>Manage Services</button></a>
-    <a href="{% url 'updateprofile' %}" class="nav-link"><button>Upgrade Profile</button></a>
-    
+    <a href="{% url 'admin_edit_profile' user_id=user.id %}"><button>Edit Profile</button></a>
+
 </aside>
 
 
 
     </div>
 <script src="{% static 'js/adminpanel.js' %}"></script>
-   
+
 </body>
 
 </html>
