--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -3,10 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Railway Reservation System</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Railway Reservation System</title>
     <link rel="stylesheet" href="{% static 'css/index.css' %}?v=1.3">
+    <title>Railway Reservation System</title>
     
 </head>
 <body>
@@ -50,7 +49,6 @@
 <section id="gallery" class="section">
     <h2>Photo Gallery</h2>
     <div class="gallery-container">
-        <!-- Images ko do bar copy kiya gaya hai taake scroll lagataar chalta rahe -->
         <div class="gallery">
             <img src="{% static 'images/download (1).jpeg' %}" alt="Train 1">
             <img src="{% static 'images/images (1).jpeg' %}" alt="Train 2">
