--- a/user/templates/user/search.html
+++ b/user/templates/user/search.html
@@ -87,16 +87,14 @@
             align-items: center;
             gap: 10px;
         }
-        p
-        {
+        p {
             color: black;
             text-align: center;
             font-family: 'Times New Roman', Times, serif;
         }
-        a{
+        a {
             color: green;
             font-family: 'Times New Roman', Times, serif
-
         }
     </style>
 </head>
@@ -109,6 +107,11 @@
         
         <form method="post" action="{% url 'search_train_public' %}">
             {% csrf_token %}
+            
+            {% if error_message %}
+                <p style="color: red; text-align: center;">{{ error_message }}</p>
+            {% endif %}
+
             <label>From Station:</label>
             <select name="from_station" required>
                 <option value="">--Select--</option>
@@ -165,9 +168,9 @@
                 <option value="AC_Sleeper">AC_Sleeper</option>
                 <option value="AC_Standard">AC_Standard</option>
             </select><br><br>
-
+            
             <label>No of Passengers:</label>
-            <input type="number" id="no_of_passenger" name="no_of_passengers" min="1" max="10" value=" "><br><br>
+            <input type="number" id="no_of_passenger" name="no_of_passengers" min="1" max="10" value="{{ passengers }}"><br><br>
 
             <label>Travel Date:</label>
             <input type="date" id="travel_date" name="travel_date" required><br><br>
@@ -176,7 +179,7 @@
         </form>
 
         {% if trains %}
-            <h3>Available Trains on {{ trains.0.travel_date }}</h3>
+            <h3>Available Trains</h3>
             <table>
                 <thead>
                     <tr>
@@ -203,23 +206,13 @@
                         <td>{{ train.arrival_time }}</td>
                         <td>{{ selected_class }}</td>
                         <td>{{ passengers }}</td>
-                        <td>
-                            {% if selected_class == "Economy" %}
-                                {{ train.economy_fare }}
-                            {% elif selected_class == "Business" %}
-                                {{ train.business_fare }}
-                            {% elif selected_class == "AC_Sleeper" %}
-                                {{ train.ac_sleeper_fare }}
-                            {% else %}
-                                {{ train.ac_standard_fare }}
-                            {% endif %}
-                        </td>
+                        <td>{{ train.per_passenger_fare }}</td>
                         <td>{{ train.total_fare }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
-        {% elif request.method == 'POST' %}
+        {% elif search_performed %}
             <p>No trains found for your search criteria.</p>
         {% endif %}
         
@@ -242,7 +235,22 @@
 
     dateInput.min = formatDate(today);
     dateInput.max = formatDate(maxDate);
-     window.onload = function() {
+    
+    const passengerInput = document.getElementById('no_of_passenger');
+
+    passengerInput.addEventListener('input', function() {
+        const min = parseInt(this.min);
+        const max = parseInt(this.max);
+        const value = parseInt(this.value);
+        if (value > max) {
+            this.value = max;
+        } 
+        else if (value < min) {
+            this.value = min;
+        }
+    });
+
+    window.onload = function() {
         document.querySelector('form').reset();
     };
 </script>
