--- a/user/templates/user/trainmanagement.html
+++ b/user/templates/user/trainmanagement.html
@@ -129,6 +129,7 @@
                 <label>From Station:</label>
                 <select name="from_station" required>
                     <option value="">--Select--</option>
+                    <option value="Rawalpindi">Rawalpindi</option>
                     <option value="Lahore">Lahore</option>
                     <option value="Karachi">Karachi</option>
                     <option value="Islamabad">Islamabad</option>
@@ -153,6 +154,7 @@
                 <label>To Station:</label>
                 <select name="to_station" required>
                     <option value="">--Select--</option>
+                    <option value="Rawalpindi">Rawalpindi</option>
                     <option value="Lahore">Lahore</option>
                     <option value="Karachi">Karachi</option>
                     <option value="Islamabad">Islamabad</option>
